# Wivern

./: Application.cpp  Application.h  CMakeLists.txt  Documents.cpp  main.cpp
Src/: Application.cpp  Application.hpp  Main.cpp
Src/Ui/: AppConfig.json  AppIcons.qrc  AppMainWindow.cpp  AppMainWindow.hpp  DarkThemeResources.qrc  Document.cpp  Document.h  LightThemeResources.qrc  MainToolBar.cpp  MainToolBar.h  MainWindow.cpp  MainWindow.hpp  PlanToolsWidget.cpp  PlanToolsWidget.h  StartSettingWidget.cpp  StartSettingWidget.h  StartSettingWidget.ui  ToolWidget.cpp  ToolWidget.h  UiResources.qrc
Src/Ui/AppIco/: ArrowOfIco.free  ArrowOnIco.free
Src/Ui/DarkTheme/: DarkThemeIcoTopToolBar.json  MainDarkColorTheme.qss  MenuDarkColorTheme.qss  MenuFileIco.json
Src/Ui/DarkTheme/DarkThemeForToolBars/: CreateButton.qss  OpenButton.qss  ReturnButton.qss  SaveAllButton.qss  SaveButton.qss  UndoButton.qss
Src/Ui/DarkTheme/IcoForMenu/: LanguageIco.free  OpenIco.free
Src/Ui/Languages/: En.json  Ru.json
Src/Ui/LightTheme/: MainLightColorTheme.qss  MenuFileIco.json  MenuLightColorTheme.qss
Src/Ui/LightTheme/IcoForMenu/: LanguageIco.free
Src/Ui/LightTheme/LightThemeForTollBars/: CreateButton.qss  OpenButton.qss  ReturnButton.qss  SaveAllButton.qss  SaveButton.qss  UndoButton.qss
Src/Ui/MenuBar/: FileMenu.cpp  FileMenu.h  HelpMenu.cpp  HelpMenu.h
Src/Ui/ToolBars/: MainToolBar.cpp  MainToolBar.hpp
